// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for AppFit's track destination action: all fields 1`] = `
Object {
  "eventSource": "segment",
  "occurredAt": "2021-02-01T00:00:00.000Z",
  "payload": Object {
    "anonymousId": "M$xwt#p",
    "deviceId": "M$xwt#p",
    "deviceType": "M$xwt#p",
    "eventId": "M$xwt#p",
    "name": "M$xwt#p",
    "osName": "M$xwt#p",
    "properties": Object {
      "testType": "M$xwt#p",
    },
    "userId": "M$xwt#p",
  },
}
`;

exports[`Testing snapshot for AppFit's track destination action: required fields 1`] = `
Object {
  "eventSource": "segment",
  "occurredAt": "2021-02-01T00:00:00.000Z",
  "payload": Object {
    "eventId": "M$xwt#p",
    "name": "M$xwt#p",
  },
}
`;
